src/test/ui/traits/wf-trait-object-only-maybe-bound.stderr
error[E0224]: at least one non-builtin trait is required for an object type
  --> $DIR/wf-trait-object-only-maybe-bound.rs:3:11
   |
LL | type _0 = dyn ?Sized;
   |           ^^^^^^^^^^

error: aborting due to previous error

